Changes for 1.8.0.0
* Changed trigger property "when" so that it can be set multiple times, allowing a trigger to fire multiple times per round. (frogg)

* Changed game property option "Battle Rounds" to "Land Battle Rounds". (veqryn)

* Added game property option "Sea Battle Rounds". (frogg)

* Possible fix for host game hang, when host is launching and another player leaves or joins at start of launch. (veqryn)

* Possible fix for game hang / game freeze during hosting, client start step should now wait for delegate bridge to finish updating. (veqryn)

* Possible workaround for game hang / game freeze during hosting, if error occurs game should now drop back to waiting screen instead of just hanging or ghosting. (veqryn)

* Adding much more logging to HeadlessServerGame in order to try to find cause of the CastClassExceptions in TripleAPlayer.start() and NullPointer/IllegalArgumentExceptions in RemoteName. (veqryn)

* Fixed null pointer error in battle calculator when spamming the cancel button. (veqryn)

* Rebalancing Great War world war 1 game. (veqryn)

* Fixed bug where chanceIncrementOnFailure and chanceDecrementOnSuccess were not allowing any number of zero or less for chance. (veqryn)

* Fixed error where games with a round offset where doubling what round the game started on each time it was saved via the history panel. (veqryn)

* Creating a headless chat service, so that server can be created in a headless environment and still chat. (veqryn)

* Fixed bug causing fatal errors in client-server games when client owned very last step/delegate of game (only applied to some grid based games). (veqryn)

* Adding a log file for the headless server located at /log/headless-game-server-<servername>-log<#>.txt, to keep track of events. (veqryn)

* Adding many more additional commands to headless game server console, including show connections, ban player, save game, and stop game. (veqryn)
